--- a/index.html
+++ b/index.html
@@ -23,36 +23,36 @@
 
       <article>
         <img id="ramdom-dog" alt="foto perrito aleatorio" class="rounded-md">
-        <button id='random__button1'class="like__button">Like</button>
+        <button id='random__button1'class="like__button" type="button">Like</button>
       </article>
 
       <article>
         <img id="ramdom-dog2" alt="foto perrito aleatorio" class="rounded-md" />
-        <button id='random__button2'class="like__button">Like</button>
+        <button id='random__button2'class="like__button" type="button">Like</button>
       </article>
 
       <article>
         <img id="ramdom-dog3" alt="foto perrito aleatorio" class="rounded-md" />
-        <button id='random__button3'class="like__button">Like</button>
+        <button id='random__button3'class="like__button" type="button">Like</button>
       </article>
 
       <article>
         <img id="ramdom-dog4" alt="foto perrito aleatorio" class="rounded-md" />
-        <button id='random__button4'class="like__button">Like</button>
+        <button id='random__button4'class="like__button" type="button">Like</button>
       </article>
 
       <article>
         <img id="ramdom-dog5" alt="foto perrito aleatorio" class="rounded-md" />
-        <button id='random__button5'class="like__button">Like</button>
+        <button id='random__button5'class="like__button" type="button">Like</button>
       </article>
 
       <article>
         <img id="ramdom-dog6" alt="foto perrito aleatorio" class="rounded-md" />
-        <button id='random__button6'class="like__button">Like</button>
+        <button id='random__button6'class="like__button" type="button">Like</button>
       </article>
 
     </section>
-    <button class='update__btn'onclick="myDog()">Actualizame</button>
+    <button class='update__btn'onclick="myDog()" type="button">Actualizame</button>
 
     <!-- ? Section favorites -->
     <section id="favorite__images">
